Bug 145147 - FILEOPEN DOCX Hyperlink in grouped shape not imported
Summary: FILEOPEN DOCX Hyperlink in grouped shape not imported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: filter:docx
Depends on:
Blocks: DOCX-Hyperlink DOCX-Grouped-Shapes
  Show dependency treegraph
 
Reported: 2021-10-15 01:53 UTC by Aron Budea
Modified: 2023-04-06 09:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOCX (20.51 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-10-15 01:53 UTC, Aron Budea
Details
PDF exported from Word (80.16 KB, application/pdf)
2021-10-15 01:54 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-10-15 01:53:37 UTC
Created attachment 175748 [details]
Sample DOCX

Seems like this case is different from the recently fixed bug 126426.

The document, created in Word, has two shapes, both with hyperlinks added to them, and then grouped together.
In Writer the links aren't imported.

Observed using LO Version: 7.3.0.0.alpha0+ (c2de581d1943df2d84f2b71817b6a8bee41f0217), 6.0.0.3 / Windows.
Comment 1 Aron Budea 2021-10-15 01:54:34 UTC
Created attachment 175749 [details]
PDF exported from Word
Comment 2 Xisco Faulí 2021-10-15 09:50:20 UTC
Reproduced in

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 241619128c5620dbde4004c83a8d64d2a593a37a
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-03-27 14:22:20 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f4f88b883f81fbce975f72aea0f66a54e269ead

tdf#145147 DOCX import: fix hyperlink in group shape

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-03-28 08:21:00 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4daeb21a5f533144fd6b3bc397a98f37e5b1dd4c
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 5 Commit Notification 2023-04-06 09:36:01 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e17a67735ffe8e0feeef8daddf2667d3e432f6cd

tdf#145147 DOCX import: fix hyperlink in group shape

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.